<resources>
    <string name="app_name">Password Manager</string>
    <string name="password_generator">Password Generator</string>
    <string name="length">Length</string>
    <string name="length_hint">Enter the length (1-20)</string>
    <string name="use_upper">Use upper letters</string>
    <string name="use_lower">Use lower letters</string>
    <string name="use_digits">Use Digits</string>
    <string name="use_symbols">Use Symbols</string>
    <string name="generate">Generate</string>
    <string name="output_password">Output password:</string>
    <string name="output">Output:</string>
    <string name="about">About</string>
    <string name="app_version">App version</string>
    <string name="_1_2_7" translatable="false">1.2.7</string>
    <string name="github_repository">Github repository</string>
    <string name="made_by_wizand0">Made by wizand0</string>
    <string name="this_app_is_free_software_under_the_gnu_gpl_3_0_license">This app is free-software under the GNU GPL 3.0 license</string>
    <string name="app_name_title">Password manager</string>
    <string name="add_the_master_password">Please, add the master password</string>
    <string name="add_the_login">Please, add the login</string>
    <string name="login">Login</string>
    <string name="new_password">New password</string>
    <string name="new_pass_name">Please enter the name for entity</string>
    <string name="new_pass_url">Please enter the url or app</string>
    <string name="new_pass_login">Please enter the login</string>
    <string name="new_pass_password">Please enter the password</string>
    <string name="new_pass_additional">Please enter the additional info</string>
    <string name="my_passwords">My passwords</string>
    <string name="add_new_password">Add New Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="update">Update</string>
    <string name="please_enter_a_name">Please Enter a Name</string>
    <string name="you_press_password_generator">You press Password generator</string>
    <string name="you_selected_about_section">You selected about section</string>
    <string name="enter_the_password_s_length">Enter the password\'s length</string>
    <string name="enter_the_correct_length_for_password">Enter the correct length for password</string>
    <string name="enter_the_length_for_password">Enter the length for password</string>
    <string name="choose_symbols_for_password">Choose symbols for password</string>
    <string name="copied">Copied</string>
    <string name="delete">Delete</string>
    <string name="you_selected_main_section">You selected Main section</string>
    <string name="settings">Settings</string>
    <string name="under_constraction">Under constraction</string>
    <string name="close">Close</string>
</resources>