<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.wizand.passwordmanager.MainScreenActivity">

    <item
        android:id="@+id/main"
        android:orderInCategory="100"
        android:title="@string/my_passwords"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/generator"
        android:orderInCategory="100"
        android:title="@string/password_generator"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>



</menu>